# GPoloidal

./: .gitignore  README.md  pyproject.toml
example/rt1tomography/: create_inducing_point.py  point_temp.npz
src/gpoloidal/: __init__.py  geometry_matrix.py  kernel.py  plot_utils.py  tomography.py  utils.py
src/gpoloidal/rt1/: Bmin_spline.pkl  __init__.py  mag.py  phantom.py  rt1_simple_frame.json  rt1kernel.py
